// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletVote should render 1`] = `
<DocumentFragment>
  <div
    class="w-full flex items-center"
    data-testid="WalletVote"
  >
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-secondary-900 dark:border-theme-secondary-700 text-theme-secondary-900 dark:text-theme-secondary-700"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Voting for
        </span>
        <span>
          arkx
        </span>
      </div>
      <div
        class="flex flex-col justify-between font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-6 pl-6"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Rank
        </span>
        <span>
          N/A
        </span>
      </div>
      <div
        class="flex flex-col justify-between font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-6 pl-6"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Votes
        </span>
        <span>
          1
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /1
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800 mr-6 pr-6 space-x-4"
    >
      <div
        class="flex flex-col items-end justify-between"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Status
        </span>
        <span>
          <span
            class="text-theme-success-600"
          >
            Active 1
          </span>
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /1
          </span>
        </span>
      </div>
      <div
        class="Circle-uw7h4j-0 JkqUV border-theme-success-600 dark:border-theme-secondary-700 text-theme-success-600 dark:text-theme-secondary-700"
      >
        <div
          class="sc-bdfBwQ hsdSHq"
          height="15"
          width="16"
        >
          <svg>
            checkmark-big.svg
          </svg>
        </div>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 cyPweQ space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
      <span>
        Vote
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render a multiple votes 1`] = `
<DocumentFragment>
  <div
    class="w-full flex items-center"
    data-testid="WalletVote"
  >
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-secondary-900 dark:border-theme-secondary-700 text-theme-secondary-900 dark:text-theme-secondary-700"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Voting for
        </span>
        <span
          class="cursor-pointer"
        >
          Multivote
        </span>
      </div>
      <div
        class="flex flex-col justify-between font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-6 pl-6"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Votes
        </span>
        <span>
          2
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /1
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800 mr-6 pr-6 space-x-4"
    >
      <div
        class="flex flex-col items-end justify-between"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Status
        </span>
        <span>
          <span
            class="text-theme-success-600"
          >
            Active 1
          </span>
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /2
          </span>
        </span>
      </div>
      <div
        class="Circle-uw7h4j-0 JkqUV border-theme-success-600 dark:border-theme-secondary-700 text-theme-success-600 dark:text-theme-secondary-700"
      >
        <div
          class="sc-bdfBwQ hsdSHq"
          height="15"
          width="16"
        >
          <svg>
            checkmark-big.svg
          </svg>
        </div>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 cyPweQ space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
      <span>
        Vote
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render a single vote 1`] = `
<DocumentFragment>
  <div
    class="w-full flex items-center"
    data-testid="WalletVote"
  >
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-secondary-900 dark:border-theme-secondary-700 text-theme-secondary-900 dark:text-theme-secondary-700"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Voting for
        </span>
        <span>
          arkx
        </span>
      </div>
      <div
        class="flex flex-col justify-between font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-6 pl-6"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Rank
        </span>
        <span>
          #1
        </span>
      </div>
      <div
        class="flex flex-col justify-between font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-6 pl-6"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Votes
        </span>
        <span>
          1
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /1
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800 mr-6 pr-6 space-x-4"
    >
      <div
        class="flex flex-col items-end justify-between"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Status
        </span>
        <span>
          <span
            class="text-theme-success-600"
          >
            Active 1
          </span>
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /1
          </span>
        </span>
      </div>
      <div
        class="Circle-uw7h4j-0 JkqUV border-theme-success-600 dark:border-theme-secondary-700 text-theme-success-600 dark:text-theme-secondary-700"
      >
        <div
          class="sc-bdfBwQ hsdSHq"
          height="15"
          width="16"
        >
          <svg>
            checkmark-big.svg
          </svg>
        </div>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 cyPweQ space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
      <span>
        Vote
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render a single vote without rank 1`] = `
<DocumentFragment>
  <div
    class="w-full flex items-center"
    data-testid="WalletVote"
  >
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-secondary-900 dark:border-theme-secondary-700 text-theme-secondary-900 dark:text-theme-secondary-700"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between font-semibold"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Voting for
        </span>
        <span>
          arkx
        </span>
      </div>
      <div
        class="flex flex-col justify-between font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-6 pl-6"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Rank
        </span>
        <span>
          N/A
        </span>
      </div>
      <div
        class="flex flex-col justify-between font-semibold border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-6 pl-6"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Votes
        </span>
        <span>
          1
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /1
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex font-semibold border-r border-theme-secondary-300 dark:border-theme-secondary-800 mr-6 pr-6 space-x-4"
    >
      <div
        class="flex flex-col items-end justify-between"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm"
        >
          Status
        </span>
        <span>
          <span
            class="text-theme-success-600"
          >
            Active 1
          </span>
          <span
            class="text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            /1
          </span>
        </span>
      </div>
      <div
        class="Circle-uw7h4j-0 JkqUV border-theme-success-600 dark:border-theme-secondary-700 text-theme-success-600 dark:text-theme-secondary-700"
      >
        <div
          class="sc-bdfBwQ hsdSHq"
          height="15"
          width="16"
        >
          <svg>
            checkmark-big.svg
          </svg>
        </div>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 cyPweQ space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
      <span>
        Vote
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render loading state 1`] = `
<DocumentFragment>
  <div
    class="flex w-full items-center"
    data-testid="WalletVote__skeleton"
  >
    <div
      class="Circle-uw7h4j-0 JkqUV border-transparent mr-4"
    >
      <span>
        <span
          class="flex items-center leading-none"
        >
          <span
            class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style="width: 44px; height: 44px; border-radius: 50%;"
          >
            ‌
          </span>
          ‌
        </span>
      </span>
    </div>
    <div
      class="flex flex-col justify-between h-10"
    >
      <span>
        <span
          class="flex items-center leading-none"
        >
          <span
            class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style="width: 100px; height: 14px;"
          >
            ‌
          </span>
          ‌
        </span>
      </span>
      <span>
        <span
          class="flex items-center leading-none"
        >
          <span
            class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style="width: 150px; height: 16px;"
          >
            ‌
          </span>
          ‌
        </span>
      </span>
    </div>
    <div
      class="ml-auto"
    >
      <span>
        <span
          class="flex items-center leading-none"
        >
          <span
            class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style="width: 100px; height: 44px;"
          >
            ‌
          </span>
          ‌
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render the maximum votes 1`] = `
<DocumentFragment>
  <div
    class="w-full flex items-center"
    data-testid="WalletVote"
  >
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-secondary-500 dark:border-theme-secondary-700 text-theme-secondary-500 dark:text-theme-secondary-700"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between"
      >
        <span
          class="font-semibold"
        >
          My Votes
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/101
          </span>
        </span>
        <span
          class="leading-none"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 mr-1"
          >
            You have not yet voted for a Delegate
          </span>
          <a
            class="Link__AnchorStyled-sc-1q7sbxr-0 gwkapx inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
            data-testid="Link"
            rel="noopener noreferrer"
            to="https://ark.dev/docs/desktop-wallet/user-guides/how-to-vote-unvote"
          >
            <span
              class="text-sm"
            >
              Learn more
            </span>
          </a>
        </span>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 cyPweQ space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
      <span>
        Vote
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`WalletVote should render without votes 1`] = `
<DocumentFragment>
  <div
    class="w-full flex items-center"
    data-testid="WalletVote"
  >
    <div
      class="Circle-uw7h4j-0 JkqUV border-theme-secondary-500 dark:border-theme-secondary-700 text-theme-secondary-500 dark:text-theme-secondary-700"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-1 ml-4"
    >
      <div
        class="flex flex-col justify-between"
      >
        <span
          class="font-semibold"
        >
          My Vote
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            0/1
          </span>
        </span>
        <span
          class="leading-none"
        >
          <span
            class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 mr-1"
          >
            You have not yet voted for a Delegate
          </span>
          <a
            class="Link__AnchorStyled-sc-1q7sbxr-0 gwkapx inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary-600 hover:text-theme-primary-700 hover:underline active:text-theme-primary-500"
            data-testid="Link"
            rel="noopener noreferrer"
            to="https://ark.dev/docs/desktop-wallet/user-guides/how-to-vote-unvote"
          >
            <span
              class="text-sm"
            >
              Learn more
            </span>
          </a>
        </span>
      </div>
    </div>
    <button
      class="Button-mdtvtf-0 cyPweQ space-x-2"
      data-testid="WalletVote__button"
      type="button"
    >
      <div
        class="sc-bdfBwQ fdjKgV"
        height="17"
        width="17"
      >
        <svg>
          vote.svg
        </svg>
      </div>
      <span>
        Vote
      </span>
    </button>
  </div>
</DocumentFragment>
`;
